# serializer version: 1
# name: test_entry_diagnostics_bridge
  dict({
    'device_info': dict({
      'devices': list([
        dict({
          'shutter': list([
          ]),
        }),
        dict({
          'light': list([
          ]),
        }),
        dict({
          'irrigation': list([
          ]),
        }),
        dict({
          'clima': list([
          ]),
        }),
        dict({
          'other': list([
          ]),
        }),
      ]),
      'last_exception': 'None',
      'last_update success': True,
    }),
    'entry': dict({
      'data': dict({
        'host': 'fake_bridge_host',
        'pin': '**REDACTED**',
        'port': 80,
        'type': 'Serial bridge',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'comelit',
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': 'Mock Title',
      'unique_id': None,
      'version': 1,
    }),
    'type': 'Serial bridge',
  })
# ---
# name: test_entry_diagnostics_vedo
  dict({
    'device_info': dict({
      'devices': list([
        dict({
          'area_description': list([
          ]),
        }),
        dict({
          'zone_description': list([
          ]),
        }),
        dict({
          'area_statistics': list([
          ]),
        }),
        dict({
          'zone_statistics': list([
          ]),
        }),
      ]),
      'last_exception': 'None',
      'last_update success': True,
    }),
    'entry': dict({
      'data': dict({
        'host': 'fake_vedo_host',
        'pin': '**REDACTED**',
        'port': 8080,
        'type': 'Vedo system',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'comelit',
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': 'Mock Title',
      'unique_id': None,
      'version': 1,
    }),
    'type': 'Vedo system',
  })
# ---
